packages/cli/crates/cli/src/snapshots/agentloop_cli__render_snapshots__busy_line_running.snap
---
source: crates/cli/src/render_snapshots.rs
expression: rendered
---
Start with a prompt or /help.

















·⬩◆··  Pondering… (0s · ↑ 1.2k tokens · esc to interrupt)
╭ prompt ──────────────────────────────────────────────────────────────────────╮
│ Fix a TODO in the codebase                                                   │
│code · anthropic/claude-sonnet-4-5 · anthropic · tab mode · ctrl+p commands   │
╰──────────────────────────────────────────────────────────────────────────────╯
native · code · auto · anthropic/claude-sonnet-4-5 · ↑0 ↓0
