packages/cli/crates/cli/src/snapshots/agentloop_cli__render_snapshots__chat_markdown.snap
---
source: crates/cli/src/render_snapshots.rs
expression: rendered
---
AgenticStudio 0.1.0 — /help for keys and commands

  > show me a heading

  # Demo


  This is bold and inline.
  ┌─ rust
  │ fn main() {}
  └─








────────────────────────────────────────────────────────────────────────────────
┌ prompt ──────────────────────────────────────────────────────────────────────┐
│ Type a message, / for commands, @ for files                                  │
└──────────────────────────────────────────────────────────────────────────────┘
native · code · auto · anthropic/claude-sonnet-4-5 · idle · tokens in/out 0 / 0
