packages/cli/crates/cli/src/snapshots/agentloop_cli__render_snapshots__chat_table.snap
---
source: crates/cli/src/render_snapshots.rs
expression: rendered
---
✻ AgenticStudio 0.1.0
cwd: .
shift+tab cycles modes · ctrl+o expands tools · enter mid-turn queues · /help

> show a table

  Summary:
  ┌───────┬───────┐
  │ Name  │ Count │
  ├───────┼───────┤
  │ alpha │     1 │
  │ beta  │    42 │
  └───────┴───────┘






────────────────────────────────────────────────────────────────────────────────
┌ prompt ──────────────────────────────────────────────────────────────────────┐
│ Type a message, / commands, @ files · @path:[0:12] python slice              │
└──────────────────────────────────────────────────────────────────────────────┘
native · code · auto · anthropic/claude-sonnet-4-5 · ↑0 ↓0
