packages/cli/crates/cli/src/snapshots/agentloop_cli__render_snapshots__chat_thinking.snap
---
source: crates/cli/src/render_snapshots.rs
expression: rendered
---
✻ Thought for 0s (ctrl+t to expand)

  Here is the answer.
















╭ prompt ──────────────────────────────────────────────────────────────────────╮
│ Fix a TODO in the codebase                                                   │
│code · anthropic/claude-sonnet-4-5 · anthropic · tab mode · ctrl+p commands   │
╰──────────────────────────────────────────────────────────────────────────────╯
native · code · auto · anthropic/claude-sonnet-4-5 · ↑0 ↓0
