packages/cli/crates/cli/src/snapshots/agentloop_cli__render_snapshots__chat_thinking_streaming.snap
---
source: crates/cli/src/render_snapshots.rs
expression: rendered
---
· Thinking…
  Let me reason about this step by step.
  First, check the module layout.















◆····  Pondering… (0s · ↑ 0 tokens · esc to interrupt)
╭ prompt ──────────────────────────────────────────────────────────────────────╮
│ Fix a TODO in the codebase                                                   │
│code · anthropic/claude-sonnet-4-5 · anthropic · tab mode · ctrl+p commands   │
╰──────────────────────────────────────────────────────────────────────────────╯
native · code · auto · anthropic/claude-sonnet-4-5 · ↑0 ↓0
