packages/cli/crates/cli/src/snapshots/agentloop_cli__render_snapshots__chat_tool_row.snap
---
source: crates/cli/src/render_snapshots.rs
expression: rendered
---
⏺ Read(src/main.rs)
  ⎿ Read 1 line

















╭ prompt ──────────────────────────────────────────────────────────────────────╮
│ Fix a TODO in the codebase                                                   │
│code · anthropic/claude-sonnet-4-5 · anthropic · tab mode · ctrl+p commands   │
╰──────────────────────────────────────────────────────────────────────────────╯
native · code · auto · anthropic/claude-sonnet-4-5 · ↑0 ↓0
