packages/cli/crates/cli/src/snapshots/agentloop_cli__render_snapshots__connect_provider_gallery.snap
---
source: crates/cli/src/render_snapshots.rs
assertion_line: 757
expression: rendered
---
Start with a prompt or /help.                                     ╭ context ───────────────────────╮
                                                                  │ context                        │
                                                                  │   0 tokens                     │
                                                                  │   native · anthropic/claude-s… │
                                                                  │                                │
                                                                  │ mcp                            │
                                                                  │   none installed               │
               ╭ Connect a provider ────────────────────────────────────────────────╮              │
               │Popular                                                             │              │
               │✓ Anthropic  Claude models via API key (ANTHROPIC_API_KEY)          │              │
               │  OpenAI  GPT models · ChatGPT or API key                           │              │
               │  DeepSeek  V4 Pro + Flash · extended thinking                      │              │
               │  GitHub Copilot  Sign in with GitHub device flow                   │              │
               │  Google Gemini  Gemini models via API key (GEMINI_API_KEY)         │              │
               │Cloud                                                               │              │
               │  Groq  Fast inference · OpenAI-compatible                          │              │
               │  xAI Grok  Grok models · OpenAI-compatible                         │              │
               │  OpenRouter  Gateway to many models · auto-routing                 │              │
               │  Cerebras  Ultra-fast inference · OpenAI-compatible                │              │
               │Local                                                               │              │
               ╰ esc ───────────────────────────────────────────────────────────────╯              │
                                                                  │                                │
                                                                  ╰────────────────────────────────╯
╭ prompt ──────────────────────────────────────────────────────────────────────────────────────────╮
│ Fix a TODO in the codebase                                                                       │
│code · anthropic/claude-sonnet-4-5 · anthropic · tab mode · ctrl+p commands                       │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
native · code · auto · anthropic/claude-sonnet-4-5 · ↑0 ↓0 · ctrl+p commands
