packages/cli/crates/cli/src/snapshots/agentloop_cli__render_snapshots__overlay_command_palette.snap
---
source: crates/cli/src/render_snapshots.rs
expression: rendered
---
Start with a prompt or /help.




           ╭ commands  filter: mod ─────────────────────────────────╮
           │/model             pick or set the session model [provid│
           │Open model picker  browse models /model                 │
           │                                                        │
           │                                                        │
           │                                                        │
           │                                                        │
           │                                                        │
           │                                                        │
           │                                                        │
           │                                                        │
           │                                                        │
           │                                                        │
           ╰────────────────────────────────────────────────────────╯
╭ prompt ──────────────────────────────────────────────────────────────────────╮
│ Fix a TODO in the codebase                                                   │
│code · anthropic/claude-sonnet-4-5 · anthropic · tab mode · ctrl+p commands   │
╰──────────────────────────────────────────────────────────────────────────────╯
native · code · auto · anthropic/claude-sonnet-4-5 · ↑0 ↓0
