packages/cli/crates/cli/src/snapshots/agentloop_cli__render_snapshots__overlay_model_picker.snap
---
source: crates/cli/src/render_snapshots.rs
expression: rendered
---
Start with a prompt or /help.




            ╭ models  filter:  ────────────────────────────────────╮
            │claude-sonnet-4-5 anthropic                           │
            │gpt-4.1 copilot                                       │
            │llama3 ollama                                         │
            │                                                      │
            │                                                      │
            │                                                      │
            │                                                      │
            │                                                      │
            │                                                      │
            │                                                      │
            │                                                      │
            │                                                      │
            ╰──────────────────────────────────────────────────────╯
╭ prompt ──────────────────────────────────────────────────────────────────────╮
│ Fix a TODO in the codebase                                                   │
│code · anthropic/claude-sonnet-4-5 · anthropic · tab mode · ctrl+p commands   │
╰──────────────────────────────────────────────────────────────────────────────╯
native · code · auto · anthropic/claude-sonnet-4-5 · ↑0 ↓0
